--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -7,7 +7,8 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts",
-    "dev": "tsup src/index.ts --format esm,cjs --dts --watch"
+    "dev": "tsup src/index.ts --format esm,cjs --dts --watch",
+    "lint": "eslint src/**/*.ts* --fix"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@ignite-ui-sophi/tokens": "*",
     "@ignite-ui-sophi/ts-config": "*",
+    "@ignite-ui-sophi/eslint-config": "*",
     "typescript": "^5.5.4",
     "tsup": "^8.2.4"
   }
